// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps matches snapshot for nested children 1`] = `
<DocumentFragment>
  <div
    class="sm:flex justify-center sm:mx-4"
  >
    <div
      class="group flex flex-1 px-2 py-1 md:pb-4 md:pt-3 text-sm lg:text-base md:leading-tight border-l-4 sm:border-l-0 sm:border-t-4 max-w-xs cursor-default text-gray-600 border-green-600 sm:bg-theme-color-surface"
    >
      <span
        class="flex flex-shrink-0 justify-center w-6 h-6 rounded-2xl text-xs text-white pt-0.5 bg-teal-700"
      >
        1
      </span>
      <span
        class="ml-2"
      >
        Step 1
      </span>
    </div>
    <div
      class="group flex flex-1 px-2 py-1 md:pb-4 md:pt-3 text-sm lg:text-base md:leading-tight border-l-4 sm:border-l-0 sm:border-t-4 max-w-xs cursor-default text-gray-600 border-transparent"
    >
      <span
        class="flex flex-shrink-0 justify-center w-6 h-6 rounded-2xl text-xs text-white pt-0.5 bg-teal-700"
      >
        2
      </span>
      <span
        class="ml-2"
      >
        Step 2
      </span>
    </div>
    <div
      class="group flex flex-1 px-2 py-1 md:pb-4 md:pt-3 text-sm lg:text-base md:leading-tight border-l-4 sm:border-l-0 sm:border-t-4 max-w-xs cursor-default text-gray-600 border-transparent"
    >
      <span
        class="flex flex-shrink-0 justify-center w-6 h-6 rounded-2xl text-xs text-white pt-0.5 bg-teal-700"
      >
        3
      </span>
      <span
        class="ml-2"
      >
        Step 3
      </span>
    </div>
  </div>
  <div
    class="flex justify-center w-full py-10 px-4 bg-theme-color-surface"
  >
    <div
      class="max-w-xl w-full"
    >
      <form
        data-testid="form"
      >
        <h1>
          Form 1
        </h1>
        <button>
          Continue
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Steps navigate to next step when submitting a form 1`] = `
<DocumentFragment>
  <div
    class="sm:flex justify-center sm:mx-4"
  >
    <div
      class="group flex flex-1 px-2 py-1 md:pb-4 md:pt-3 text-sm lg:text-base md:leading-tight border-l-4 sm:border-l-0 sm:border-t-4 max-w-xs cursor-pointer text-gray-400 border-gray-400 transition hover:text-teal-700 hover:border-teal-700"
    >
      <span
        class="flex flex-shrink-0 justify-center w-6 h-6 rounded-2xl text-xs text-white items-center bg-gray-400 transition group-hover:bg-teal-700"
      >
        <svg
          class="w-3 h-3 flex-shrink-0"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="ml-2"
      >
        Step 1
      </span>
    </div>
    <div
      class="group flex flex-1 px-2 py-1 md:pb-4 md:pt-3 text-sm lg:text-base md:leading-tight border-l-4 sm:border-l-0 sm:border-t-4 max-w-xs cursor-default text-gray-600 border-green-600 sm:bg-theme-color-surface"
    >
      <span
        class="flex flex-shrink-0 justify-center w-6 h-6 rounded-2xl text-xs text-white pt-0.5 bg-teal-700"
      >
        2
      </span>
      <span
        class="ml-2"
      >
        Step 2
      </span>
    </div>
    <div
      class="group flex flex-1 px-2 py-1 md:pb-4 md:pt-3 text-sm lg:text-base md:leading-tight border-l-4 sm:border-l-0 sm:border-t-4 max-w-xs cursor-default text-gray-600 border-transparent"
    >
      <span
        class="flex flex-shrink-0 justify-center w-6 h-6 rounded-2xl text-xs text-white pt-0.5 bg-teal-700"
      >
        3
      </span>
      <span
        class="ml-2"
      >
        Step 3
      </span>
    </div>
  </div>
  <div
    class="flex justify-center w-full py-10 px-4 bg-theme-color-surface"
  >
    <div
      class="max-w-xl w-full"
    >
      <div
        class="flex justify-center w-full py-10 px-4 bg-theme-color-surface"
      >
        <div
          class="max-w-xl w-full"
        >
          <form
            data-testid="form"
          >
            <h1>
              Form 2A
            </h1>
            <button>
              Continue
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
